<resources>
    <string name="app_name">RunningApp</string>
    <string name="number_of_reps">Number of Reps</string>
    <string name="workout_type">Workout type</string>
    <string name="enter_workout_type">Enter Workout Type</string>
    <string name="rep_distance">Rep Distance</string>
    <string name="enter_num_reps">Enter Num Reps</string>
    <string name="enter_workout_date">Enter Workout date</string>
    <string name="add">Add</string>
    <string name="enter_rep_distance">Enter Rep Distance</string>
    <string name="workout_date">Workout Date</string>
    <string name="workout_name">Workout Name</string>
    <string name="view_all_workouts">View All Workouts</string>
    <string name="athlete_stats">Athlete Stats</string>
    <string name="welcome">Welcome</string>
    <string name="add_workout">Add Workout</string>
    <string name="check_weather">Check Weather</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_weather">weather_activity</string>
    <string name="back_to_home">Back to Home</string>
    <string name="return_home">Return Home</string>
</resources>